--- a/src/public/manifest.json
+++ b/src/public/manifest.json
@@ -3,30 +3,49 @@
   "short_name": "Smart Ledger",
   "description": "Manage money transactions with workers and suppliers",
   "start_url": "/",
+  "scope": "/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#3b82f6",
-  "orientation": "portrait",
+  "orientation": "portrait-primary",
+  "dir": "ltr",
+  "lang": "en",
+  "categories": ["finance", "productivity", "business"],
   "icons": [
     {
-      "src": "/icon-192.png",
+      "src": "/icons/icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/icon-512.png",
+      "src": "/icons/icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
     }
   ],
-  "categories": ["finance", "productivity", "business"],
   "screenshots": [
     {
-      "src": "/screenshot.png",
+      "src": "/screenshots/screenshot.png",
       "sizes": "540x720",
       "type": "image/png"
+    }
+  ],
+  "shortcuts": [
+    {
+      "name": "Add New Entry",
+      "short_name": "Add Entry",
+      "description": "Quickly add a new transaction",
+      "url": "/?action=add-entry",
+      "icons": [{ "src": "/icons/icon-192.png", "sizes": "192x192" }]
+    },
+    {
+      "name": "View Reports",
+      "short_name": "Reports",
+      "description": "View your financial reports",
+      "url": "/?action=view-reports",
+      "icons": [{ "src": "/icons/icon-192.png", "sizes": "192x192" }]
     }
   ]
 }
