--- a/src/public/manifest.json
+++ b/src/public/manifest.json
@@ -8,44 +8,18 @@
   "background_color": "#ffffff",
   "theme_color": "#3b82f6",
   "orientation": "portrait-primary",
-  "dir": "ltr",
-  "lang": "en",
-  "categories": ["finance", "productivity", "business"],
   "icons": [
     {
-      "src": "/icons/icon-192.png",
+      "src": "/icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/icons/icon-512.png",
+      "src": "/icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
-    }
-  ],
-  "screenshots": [
-    {
-      "src": "/screenshots/screenshot.png",
-      "sizes": "540x720",
-      "type": "image/png"
-    }
-  ],
-  "shortcuts": [
-    {
-      "name": "Add New Entry",
-      "short_name": "Add Entry",
-      "description": "Quickly add a new transaction",
-      "url": "/?action=add-entry",
-      "icons": [{ "src": "/icons/icon-192.png", "sizes": "192x192" }]
-    },
-    {
-      "name": "View Reports",
-      "short_name": "Reports",
-      "description": "View your financial reports",
-      "url": "/?action=view-reports",
-      "icons": [{ "src": "/icons/icon-192.png", "sizes": "192x192" }]
     }
   ]
 }
