--- a/src/public/manifest.json
+++ b/src/public/manifest.json
@@ -17,13 +17,13 @@
   ],
   "icons": [
     {
-      "src": "/icon/icon-192.png",
+      "src": "/public/icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/icon/icon-512.png",
+      "src": "/public/icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
@@ -44,7 +44,7 @@
       "url": "/?action=add-entry",
       "icons": [
         {
-          "src": "/icons/icon-192.png",
+          "src": "/public/icon-192.png",
           "sizes": "192x192"
         }
       ]
@@ -56,7 +56,7 @@
       "url": "/?action=view-reports",
       "icons": [
         {
-          "src": "/icons/icon-192.png",
+          "src": "/public/icon-192.png",
           "sizes": "192x192"
         }
       ]
