--- a/src/public/manifest.json
+++ b/src/public/manifest.json
@@ -8,58 +8,41 @@
   "background_color": "#ffffff",
   "theme_color": "#3b82f6",
   "orientation": "portrait-primary",
-  "dir": "ltr",
-  "lang": "en",
-  "categories": [
-    "finance",
-    "productivity",
-    "business"
-  ],
   "icons": [
     {
-      "src": "/public/icon-192.png",
+      "src": "/icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/public/icon-512.png",
+      "src": "/icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
     }
   ],
-  "screenshots": [
-    {
-      "src": "/screenshots/screenshot.png",
-      "sizes": "540x720",
-      "type": "image/png"
-    }
-  ],
   "shortcuts": [
     {
-      "name": "Add New Entry",
+      "name": "Add Transaction",
       "short_name": "Add Entry",
       "description": "Quickly add a new transaction",
-      "url": "/?action=add-entry",
+      "url": "/add",
       "icons": [
         {
-          "src": "/public/icon-192.png",
-          "sizes": "192x192"
+          "src": "/icon-192.png",
+          "sizes": "192x192",
+          "type": "image/png"
         }
       ]
-    },
+    }
+  ],
+  "categories": ["finance", "productivity", "business"],
+  "screenshots": [
     {
-      "name": "View Reports",
-      "short_name": "Reports",
-      "description": "View your financial reports",
-      "url": "/?action=view-reports",
-      "icons": [
-        {
-          "src": "/public/icon-192.png",
-          "sizes": "192x192"
-        }
-      ]
+      "src": "/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ]
 }
